STYLE: home page is responsive

--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -94,7 +94,7 @@
             <ion-item slot="header">
               <ion-label><h3> Lenguajes de programación que manejo </h3></ion-label>
             </ion-item>
-            <div class="ion-padding" slot="content" id="content_graphics">
+            <div slot="content" id="content_graphics">
               <div lines="none" id="button-group">
                 <ion-button (click)="graphicfront()">Frontend lenguajes</ion-button>
                 <ion-button (click)="graphicBack()">Backend lenguajes</ion-button>
@@ -110,10 +110,6 @@
           </ion-accordion>
         </ion-accordion-group>
       </div>
-    </div>
-
-    <div id="abajo">
-      abajo
     </div>
 </ion-content>
 
