--- a/front_angular/src/app/git-hub/git-hub.page.html
+++ b/front_angular/src/app/git-hub/git-hub.page.html
@@ -8,9 +8,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card>
+  <ion-card id="card_user">
     <ion-card-header>
-      <ion-item lines="none">
+      <div id="header_card_user">
         <ion-avatar slot="start">
           <img [src]="user.avatar_url" alt="Profile Image">
         </ion-avatar>
@@ -18,7 +18,7 @@
           <h2>{{ user.name }}</h2>
           <p>{{ user.login }}</p>
         </ion-label>
-      </ion-item>
+      </div>
     </ion-card-header>
     <ion-card-content>
       <p><strong>Bio:</strong> {{ user.bio }}</p>
@@ -27,7 +27,9 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card *ngFor="let rep of repos">
+  <ion-searchbar (ionInput)="filterRepos($event)" show-clear-button="always"></ion-searchbar>
+
+  <ion-card *ngFor="let rep of filteredRepos">
     <ion-card-header>
       {{ rep.name }}
     </ion-card-header>
