CREATE: graphic circle (not use)

--- a/front_angular/src/app/components/circle-data/circle-data.component.html
+++ b/front_angular/src/app/components/circle-data/circle-data.component.html
@@ -1,4 +1,1 @@
-<p>
-  circle-data works!
-  added a component to put a graphic circle 
-</p>
+<div id="main" style="width: 600px;height:400px;"></div>
