CREATE: graphic circle (in use)

--- a/front_angular/src/app/git-hub/git-hub.page.html
+++ b/front_angular/src/app/git-hub/git-hub.page.html
@@ -58,7 +58,7 @@
     </li>
   </ul>
 
-  <app-circle-data></app-circle-data>
+  <app-circle-data [languages]="infoRepo.languages"></app-circle-data>
 
   <ul *ngIf="infoRepo.pulls && infoRepo.pulls.length !== 0">
     <p><strong>Pull Requests:</strong></p>
