--- a/front_angular/src/app/git-hub/git-hub.page.scss
+++ b/front_angular/src/app/git-hub/git-hub.page.scss
@@ -18,23 +18,71 @@
 /*encabezado de la card del usuario*/
 #userInfo{
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    font-size: 1.3vw;
     div{
         flex: 1;
-    }
-}
-#header_card_user{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    div{
-        flex: 0.5;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    #header_card_user{
+        div{
+            padding: 1%;
+            flex: 0.8;
+            height: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            align-items: center;
+            ion-avatar{
+                width: 20%;
+                height: auto;
+            }
+            ion-label{
+                height: 100%;
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: column;
+                justify-content: space-evenly;
+                p{
+                    font-size: 1.4vw;
+                }
+                span{
+                    font-size: 1.2vw
+                }
+            }
+        }
+    }
+}
+
+/*barra de busqueda*/
+ion-searchbar{
+    --font-size: 1.3vw;
+}
+
+/* card basic of repos*/
+#repos{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    ion-card{
+        width: 48%;
+        padding: 0.5%;
+        margin: 1%;
+        ion-card-header{
+            text-align: center;
+            font-weight: bold;
+            font-size: 1.2vw;
+        }
+        ion-card-content{
+            p{
+                font-size: 1vw;
+            }
+        }
     }
 }
 
@@ -57,7 +105,6 @@
             padding: 1%;
         }
     }
-
     #issues {
         flex: 1;
         background: red;
@@ -88,6 +135,52 @@
 
 /* Media Queries */
 @media (max-width: 768px) {
+    #header{
+        ion-title{
+            font-size: 4vw;
+        }
+    }
+    #userInfo{
+        flex-direction: column;
+        div{
+            padding-left: 5%;
+            font-size: 4vw;
+        }
+        #header_card_user{
+            div{
+                flex-direction: column;
+                ion-avatar{
+                    width: 60%;
+                    height: auto;
+                }
+                ion-label{
+                    text-align: center;
+                    p{
+                        font-weight: bold;
+                        font-size: 4vw;
+                    }
+                    span{
+                        font-size: 3.6vw
+                    }
+                }
+            }
+        }
+    }
+    #repos{
+        width: 100%;
+        justify-content: center;
+        ion-card{
+            width: 90%;
+            ion-card-header{
+                font-size: 3.4vw;
+            }
+            ion-card-content{
+                p{
+                    font-size: 3vw;
+                }
+            }
+        }
+    }
     #footer-icons {
         display: flex;
         flex-direction: row;
