--- a/front_angular/src/app/home/home.page.scss
+++ b/front_angular/src/app/home/home.page.scss
@@ -5,6 +5,7 @@
 }
 
 #profile_img{
+    height: auto;
     width: 30%;
     border-radius: 50%;
 }
@@ -131,7 +132,7 @@
 
 /* Pie de página */
 ion-footer {
-    background-color: #f8f9fa;
+    background-color: rgb(148,148,148);
     padding: 2rem;
 }
 
@@ -140,11 +141,10 @@ ion-footer {
     flex-direction: row;
     justify-content: space-evenly;
     gap: 1rem;
-}
-
-#footer-icons ion-icon {
-    font-size: 2.5rem;
-    color: white;
+    ion-icon {
+        font-size: 2.5rem;
+        color: white;
+    }
 }
 
 /* Tamaño ajustado para pantallas móviles */
